# JavaInvoker

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: AutoBuild.yml
include/: JVMLocator.h
src/: JVMFactory.cpp  JVMFactory.h  JVMLocator.cpp
test/: CMakeLists.txt  TestJVMFactory.cpp  TestJVMLocator.cpp
